fix: update spacing and responsiveness in note modals
- Changed gap to match with figma visually
- Added responsive max-block-size adjustment for MyNotes

--- a/src/components/Notes/modal/MyNotes/MyNotes.module.scss
+++ b/src/components/Notes/modal/MyNotes/MyNotes.module.scss
@@ -20,6 +20,10 @@
   gap: var(--spacing-medium);
   overflow-y: auto;
   max-block-size: 45vh;
+
+  @include breakpoints.smallerThanTablet {
+    max-block-size: 60vh;
+  }
 }
 
 .noteCard {
@@ -97,6 +101,7 @@
   padding-block: var(--spacing-micro-px);
   padding-inline: var(--spacing-xsmall-px);
   gap: calc(2 * var(--spacing-xmicro));
+  margin-inline-end: var(--spacing-xsmall-px);
   font-size: var(--font-size-xsmall);
 
   border-radius: var(--border-radius-xsmall-px);
