--- a/src/components/Notes/modal/NoteFormModal.module.scss
+++ b/src/components/Notes/modal/NoteFormModal.module.scss
@@ -8,7 +8,7 @@ $note_text_area_height: 360px;
 
   display: flex;
   align-items: center;
-  gap: var(--spacing-xsmall);
+  gap: var(--spacing-xsmall-px);
   cursor: pointer;
 }
 
